<resources>
    <string name="app_name">MyNews</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="from_date">"From date"</string>
    <string name="to_date">"To date"</string>

    <string name="empty">"No results found"</string>
    <string name="ok">"OK"</string>

    <!-- Sections -->
    <string name="automobiles">"Automobiles"</string>
    <string name="movies">"Movies"</string>
    <string name="science">"Science"</string>
    <string name="world">"World"</string>
    <string name="technology">"Technology"</string>
</resources>
