<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Sections">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_automobiles"
                    android:title="@string/automobiles"/>
                <item
                    android:id="@+id/activity_main_drawer_movies"
                    android:title="@string/movies"/>
                <item
                    android:id="@+id/activity_main_drawer_science"
                    android:title="@string/science"/>
                <item
                    android:id="@+id/activity_main_drawer_technology"
                    android:title="@string/technology"/>
                <item
                    android:id="@+id/activity_main_drawer_world"
                    android:title="@string/world"/>
            </group>
        </menu>
    </item>

</menu>